--- a/client/chat.html
+++ b/client/chat.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script src="/chat.js"></script>
+    <script src="chat.js"></script>
     <title>Super Awesome Chatroom</title>
   </head>
   <body>
