try to use session variable for user_id in the chat

--- a/client/chat.html
+++ b/client/chat.html
@@ -11,8 +11,9 @@
   <body>
     <h1>Super Awesome Chatroom</h1>
     <div>
-      <div class="inlineBlock"><span>Your name:
-          <input type="text" value="Anonymous" id="name"></span><br>
+      <div class="inlineBlock">
+        <!-- <span>Your name: -->
+          <!-- <input type="text" value="Anonymous" id="name"></span><br> -->
         <form id="messageForm">
           <textarea rows="4" cols="50" placeholder="Share something!" maxlength="200" id="outgoingMessage"></textarea>
           <input type="button" value="Share" disabled id="send">
