--- a/client/chat.html
+++ b/client/chat.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="chat.js"></script>
-    <title>Super Awesome Chatroom</title>
+    <title>Chatroom</title>
   </head>
   <body>
-    <h1>Super Awesome Chatroom</h1>
-    <div>
-      <div class="inlineBlock">
-        <!-- <span>Your name: -->
-          <!-- <input type="text" value="Anonymous" id="name"></span><br> -->
-        <form id="messageForm">
-          <textarea rows="4" cols="50" placeholder="Share something!" maxlength="200" id="outgoingMessage"></textarea>
-          <input type="button" value="Share" disabled id="send">
-        </form>
-      </div>
-      <div class="inlineBlock topAligned"><b>Participants</b><br>
-        <div id="participants"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+        </div>
       </div>
     </div>
-    <div id="messages"></div>
+    <div class="container">
+      <h1>Chatroom</h1>
+        <div class="row">
+          <div class="col">
+            <form id="messageForm">
+              <div class="col-lg-6">
+                <div class="input-group bottom">
+                  <input type="text" class="form-control " placeholder="Share something">
+                  <span class="input-group-btn">
+                    <button class="btn btn-secondary" type="button">Send</button>
+                  </span>
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="inlineBlock topAligned"><b>Participants</b><br>
+            <div id="participants"></div>
+          </div>
+        </div>
+      </div>
+      <div id="messages"></div>
+    <div>
   </body>
 </html>
