--- a/client/spotify.html
+++ b/client/spotify.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <title>Web-Service-Room</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/spotify.css">
   </head>
 
   <body>
-    <div class="container">
-      <div id="login">
+    <div class="container content text-center">
+      <div class="center-btn" id="login">
         <h1>Welcome to Music-Service-Room!</h1>
-        <a href="/login" class="btn btn-primary">Log in with Spotify</a>
+        <a href="/login" class="btn btn-outline-success btn-lg">Log in with Spotify</a>
       </div>
       <div id="loggedin">
         <div id="user-profile">
