--- a/client/spotify.html
+++ b/client/spotify.html
@@ -3,7 +3,7 @@
   <head>
     <title>Web-Service-Room</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/spotify.css">
+    <link rel="stylesheet" type="text/css" href="spotify.css">
   </head>
 
   <body>
