Added sample widget for playing Spotify song

--- a/client/spotify.html
+++ b/client/spotify.html
@@ -37,6 +37,7 @@
             <dt>Id</dt><dd>{{id}}</dd>
             <dt>Email</dt><dd>{{email}}</dd>
             <dt>Country</dt><dd>{{country}}</dd>
+            <dt></dt><dd><iframe src="https://embed.spotify.com/?uri=spotify%3Atrack%3A3ZOEytgrvLwQaqXreDs2Jx" width="300" height="80" frameborder="0" allowtransparency="true"></iframe></dd>
           </dl>
         </div>
       </div>
